fix snack center on mobile. fix nfl week 4 depth. nfl images.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2672,7 +2672,7 @@ form input[type="text"] {
 @media only screen and (max-width: 750px) {
 
   #snackbar {
-    left: 80%;
+    left: 40%!important;
   }
 
   #overlay.active .modal .modal-header img {
